syntax = "proto3";

package billing;
option go_package = "internal/billing;billing";


service BillingService {
  rpc CreateBilling (CreateBillingRequest) returns (CreateBillingResponse);
  rpc CheckUserWalletBalance (CheckUserWalletBalanceRequest) returns (CheckUserWalletBalanceResponse);

}

message CheckUserWalletBalanceRequest {
  int64 user_id = 1;
  repeated string keywords = 2;
  int64 row_count = 3;
}

message CheckUserWalletBalanceResponse {
  bool isBalanceSufficient = 1;
}

message CreateBillingRequest {
  int64 user_id = 1;
  string mobile = 2;
  double initial_balance = 3;         
  double over_usage_threshold = 4;
}

message CreateBillingResponse {
  bool success = 1;
  string message = 2;
  string wallet_id = 3;
}